--- a/.deploy/local/docker-compose.yml
+++ b/.deploy/local/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: "${REGISTRY:-docker.io}/redis:latest"
     container_name: wechat-admin-redis
     restart: always
+    ports:
+      - "6381:6379"
     networks:
       - wechat-robot
     environment:
@@ -23,6 +25,8 @@ services:
     image: "${REGISTRY:-docker.io}/mysql:8.2.0"
     restart: always
     container_name: wechat-admin-mysql
+    ports:
+      - "3310:3306"
     networks:
       - wechat-robot
     volumes:
@@ -53,7 +57,37 @@ services:
       - ./wechat-server/data:/data
     environment:
       TZ: Asia/Shanghai
+  wechat-slider:
+    image: registry.cn-shenzhen.aliyuncs.com/houhou/wechat-slider:latest
+    container_name: wechat-slider
+    restart: always
+    environment:
+      - GIN_MODE=release
+      - TZ=Asia/Shanghai
+      - UUID_SERVER_URL=http://wechat-uuid:9000
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS -X GET -H 'Content-Type: application/json' http://127.0.0.1:9000/api/v1/probe | grep -q '\"success\"[[:space:]]*:[[:space:]]*true'"]
+      interval: 10s
+      timeout: 2s
+      retries: 12
+    networks:
+      - wechat-robot
 
+  wechat-uuid:
+    image: registry.cn-shenzhen.aliyuncs.com/houhou/wechat-uuid:latest
+    container_name: wechat-uuid
+    restart: always
+    environment:
+      - TZ=Asia/Shanghai
+      - GIN_MODE=release
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS -X POST -H 'Content-Type: application/json' -d '{\"data\":\"0\"}' http://127.0.0.1:9000/api/v1/uuid | grep -q '\"code\"[[:space:]]*:[[:space:]]*200'"]
+      interval: 10s
+      timeout: 2s
+      retries: 12
+      start_period: 15s
+    networks:
+      - wechat-robot
   word-cloud-server:
     image: registry.cn-shenzhen.aliyuncs.com/houhou/word-cloud-server:latest
     container_name: word-cloud-server
@@ -102,6 +136,8 @@ services:
       WECHAT_SERVER_ADDRESS: http://wechat-server:3000
       WECHAT_SERVER_TOKEN: w123456 # 自行修改
       WECHAT_OFFICIAL_ACCOUNT_AUTH_URL: https://img.houhoukang.com/uranus/qrcode_for_gh.jpg # 自行修改
+      SLIDER_SERVER_BASE_URL: http://wechat-slider:9000
+      SLIDER_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkZXZpY2VfaWRzIjpbXSwiZXhwIjoxNzYxMDI2MTM3LCJuYmYiOjE3NTg0MzQxMzcsImlhdCI6MTc1ODQzNDEzN30.PImC5aOaIMCWecuqM0XtKc44SIF-hRmvDBN2XNVHQV8 # 自行修改，加入官方交流群获取
       MYSQL_DRIVER: mysql
       MYSQL_HOST: wechat-admin-mysql
       MYSQL_PORT: 3306
