--- a/.deploy/server/docker-compose.yml
+++ b/.deploy/server/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: "${REGISTRY:-docker.io}/redis:latest"
     container_name: wechat-admin-redis
     restart: always
+    ports:
+      - "6379:6379"
     networks:
       - wechat-robot
     environment:
@@ -24,6 +26,8 @@ services:
     image: "${REGISTRY:-docker.io}/mysql:8.2.0"
     restart: always
     container_name: wechat-admin-mysql
+    ports:
+      - "3306:3306"
     networks:
       - wechat-robot
     volumes:
