--- a/.deploy/local/redis.conf
+++ b/.deploy/local/redis.conf
@@ -1,14 +1,13 @@
+# Redis配置文件
 bind 0.0.0.0
-protected-mode yes
 port 6379
-tcp-backlog 511
 timeout 0
 tcp-keepalive 60
 
 # 基本设置
 loglevel notice
 logfile ""
-databases 1000
+databases 16
 
 # 持久化设置
 save 900 1
