--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@ dev-wechat-ipad.yml
 wechat-robot-client
 pkg/good_morning/test_output
 __debug*
+wechat_client/models/__pycache__/
+*.pyc
+__pycache__/
+user.cpython-310.pyc
+example.py
+py_plugins/
+test.png
+test_plugins
+wechat_client/models/__pycache__/
+wechat_client/api/__pycache__/
+/.deploy/local/wechat_admin_mysql_data/
+/.deploy/local/wechat_admin_redis_data/
+/.deploy/server/wechat_admin_mysql_data/
+/.deploy/server/wechat_admin_redis_data/
+/.vscode/
+/机器人数据备份/
+/wechat_client/
+/wechat-uuid/
+/*.zip
+/.idea
+
