--- a/.deploy/local/nginx.conf
+++ b/.deploy/local/nginx.conf
@@ -1,13 +1,11 @@
-resolver 127.0.0.11 ipv6=off valid=30s;
-
 upstream admin_backend {
   zone admin_backend 64k; # 共享内存区，用于缓存 upstream 状态
-  server wechat-robot-admin-backend:9000 resolve;
+  server wechat-robot-admin-backend:9000;
 }
 
 upstream admin_frontend {
   zone admin_frontend 64k;
-  server wechat-robot-admin-frontend:9000 resolve;
+  server wechat-robot-admin-frontend:9000;
 }
 
 server {
